# FractalSSL

./: Exploration.ipynb  PADs_FractalSSL.ipynb  PAMAP2_TS2Vec_FractalSSL.ipynb  PAMAP2_TS2Vec_FractalSSL_mix_between_participants.ipynb  README.md  pyproject.toml  requirements.txt
configs/: pads_ts2vec_fractal.json  pamap2_ts2vec_fractal.json
legacy/: pamap2_ts2vec_fractal_ssl.py
notebooks/legacy/: PAMAP2_TS2Vec_FractalSSL_per_participant.ipynb
notebooks/pipelines/: pads_ts2vec_fractal.ipynb  pamap2_ts2vec_fractal.ipynb
notebooks/templates/: experiment_template.ipynb
scripts/: evaluate_linear.py  prepare_data.py  train_ssl.py
src/fractal_ssl/: __init__.py
src/fractal_ssl/data/: __init__.py  base.py  pads.py  pamap2.py  utils.py
src/fractal_ssl/evaluation/: __init__.py  linear_probe.py
src/fractal_ssl/models/: __init__.py  fractal.py  simclr.py  ts2vec.py
src/fractal_ssl/training/: __init__.py  loops.py
src/fractal_ssl/utils/: __init__.py  logging.py  registry.py  seed.py
